Fixed initial styles of GallerySkeleton for too small media.

--- a/src/components/Skeleton/GallerySkeleton/styles.module.css
+++ b/src/components/Skeleton/GallerySkeleton/styles.module.css
@@ -23,14 +23,15 @@
   z-index: 1;
   max-width: 480px;
   margin: 0 auto;
-  padding: 0 31px;
+  padding: 0 24px;
 }
 
 .subtitle {
   max-width: 330px;
   height: 14.993px;
   border-radius: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 34.99px;
+  /* margin-bottom: 20px; */
 }
 
 .list {
@@ -94,6 +95,12 @@
   );
   background-size: 400% 400%;
   animation: pulse 1.2s ease-in-out infinite;
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    padding: 0 31px;
+  }
 }
 
 @media screen and (min-width: 332px) {
